src/objects/Loan_Ledger__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Loan Ledgers</relationshipLabel>
        <relationshipName>Loan_Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agreed_by_client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreed by client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BB_Amount__c</fullName>
        <label>BB_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BB_Date__c</fullName>
        <label>BB_Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BB_Num__c</fullName>
        <defaultValue>0</defaultValue>
        <label>BB_Num</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Borrowed_Amount__c</fullName>
        <label>Borrowed Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <formula>TEXT(Program_Product_ASO__r.Program__r.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DWH_Import__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DWH Import</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DWH_Last_Sync__c</fullName>
        <label>DWH Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DWH_Status__c</fullName>
        <label>DWH Status</label>
        <picklist>
            <picklistValues>
                <fullName>Queued</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EventAmountAllocation1__c</fullName>
        <label>EventAmountAllocation1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventAmountAllocation2__c</fullName>
        <label>EventAmountAllocation2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventAmount__c</fullName>
        <label>EventAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventEndDate__c</fullName>
        <label>EventEndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventLoanTerm__c</fullName>
        <label>EventLoanTerm</label>
        <picklist>
            <picklistValues>
                <fullName>03 (090 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 (120 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 (150 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 (180 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 (210 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 (240 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 (270 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 (365 days)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EventProcessMethod__c</fullName>
        <label>EventProcessMethod</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventStartDate__c</fullName>
        <label>EventStartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InputFromScreen__c</fullName>
        <label>InputFromScreen</label>
        <picklist>
            <picklistValues>
                <fullName>Early repayment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bounce back</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt collection</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>LoanCharges__c</fullName>
        <label>LoanCharges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LoanEndDate__c</fullName>
        <label>LoanEndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoanID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Operation</label>
        <referenceTo>Operation__c</referenceTo>
        <relationshipLabel>Loan Ledgers</relationshipLabel>
        <relationshipName>Loan_Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LoanStartDate__c</fullName>
        <label>LoanStartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LoanVAT__c</fullName>
        <label>LoanVAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MaxPaymentHolidayDuration__c</fullName>
        <label>MaxPaymentHolidayDuration</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Move_to_Suspension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Move to Suspension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NewLoanEndDate__c</fullName>
        <label>NewLoanEndDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NewRepaymentAmountPerInstallment__c</fullName>
        <label>NewRepaymentAmountPerInstallment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewTotalInterestAmount__c</fullName>
        <label>NewTotalInterestAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewTotalPrincipalAmount__c</fullName>
        <label>NewTotalPrincipalAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Notificaton_days__c</fullName>
        <label>Notificaton days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumAvailablePaymentHolidays__c</fullName>
        <label>NumAvailablePaymentHolidays</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Amount__c</fullName>
        <label>Outstanding Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Outstanding_Fee_amount__c</fullName>
        <label>Outstanding Fee amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outstanding_Interest_amount__c</fullName>
        <label>Outstanding Interest amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program_Product_ASO_Temp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Product ASO Temp</label>
        <referenceTo>Program_Product_ASO__c</referenceTo>
        <relationshipLabel>Loan Ledgers (Program Product ASO Temp)</relationshipLabel>
        <relationshipName>Loan_Ledgers_Temp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program_Product_ASO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program Product ASO</label>
        <referenceTo>Program_Product_ASO__c</referenceTo>
        <relationshipLabel>Loan Ledgers</relationshipLabel>
        <relationshipName>Loan_Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <formula>( Borrowed_Amount__c -  Outstanding_Amount__c ) / Borrowed_Amount__c * 100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rules_Engine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rules Engine</label>
        <referenceTo>Loan_Management__c</referenceTo>
        <relationshipLabel>Loan Ledgers</relationshipLabel>
        <relationshipName>Loan_Ledgers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sign_Off_Date__c</fullName>
        <label>Sign Off Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disbursed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paused</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Per_Installment__c</fullName>
        <label>Total Amount Per Installment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isPaymentReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPaymentReceived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTaskCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTaskCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>waiveCharges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>waiveCharges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>waiveVAT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>waiveVAT</label>
        <type>Checkbox</type>
    </fields>
    <label>Loan Ledger</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Ledgers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>